--- a/resume.yaml
+++ b/resume.yaml
@@ -1,5 +1,5 @@
 basics:
-  image: https://raw.githubusercontent.com/johnwyles/resume.json/main/tech-avatar-small.jpg
+  image: https://raw.githubusercontent.com/johnwyles/resume.json/main/tech-avatar-small.png
   label: DevOps / DevSecOps Automation (CI/CD/++), and Cloud
   location:
     city: Manhattan Beach
